Improve determination of Header (and Header media) height, by using sensible defaults (which persist on IE11), and CSS Custom Properties to allow them to update, based on the viewport size and height of things that precede the Main component (like nav bars). The Header content 'peek' on non-layered Headers can now self-adjust it's height to the number of lines in the story title. ScrollHints now appear in a better location. inside Headers. A better fix is now in place for Header parallax components in Firefox.

--- a/src/app/components/Main/index.scss
+++ b/src/app/components/Main/index.scss
@@ -1,6 +1,8 @@
 @import '../../../constants';
+@import './variables';
 
 .Main {
+  --Main-offsetTop: #{$var--Main-offsetTop};
   display: block;
 
   *,
